After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 715092 - I can not set my monitor to inverted
I can not set my monitor to inverted
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Display
3.10.x
Other Linux
: Normal major
: ---
Assigned To: Debarshi Ray
Control-Center Maintainers
: 711309 719499 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2013-11-24 00:49 UTC by tbic
Modified: 2013-12-17 09:02 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
display: Make rotate buttons stay sensitive (6.03 KB, patch)
2013-12-04 03:45 UTC, Matthias Clasen
none Details | Review
rotation label (982.92 KB, image/png)
2013-12-04 03:49 UTC, Matthias Clasen
  Details
display: Add an 'upside-down' button (5.46 KB, patch)
2013-12-05 06:00 UTC, Matthias Clasen
committed Details | Review
toggle buttons (891.37 KB, image/png)
2013-12-05 06:00 UTC, Matthias Clasen
  Details
display: Use radio buttons (7.52 KB, patch)
2013-12-05 11:23 UTC, Matthias Clasen
rejected Details | Review
radio buttons (713.24 KB, image/png)
2013-12-05 11:24 UTC, Matthias Clasen
  Details

Description tbic 2013-11-24 00:49:18 UTC
I can not set my monitor to inverted
Comment 1 Bastien Nocera 2013-11-24 07:35:20 UTC
What do you use that functionality for? A specific hardware setup that requires the screen to be upside-down? Using a tablet?
Comment 2 tbic 2013-11-24 14:59:45 UTC
I have a projector that is mounted upside down to the celling.

I also have a monitor that is mounted upside down because of the reveal.
Comment 3 Matthias Clasen 2013-11-24 15:01:03 UTC
seems easy enough to add a 'upside-down' button between the rotate left and rotate right buttons
Comment 4 Allan Day 2013-11-28 09:58:23 UTC
When we first tested the new display settings, you could make the display go upside down using the rotate buttons. I personally found it really jarring, and I think others did too.

(In reply to comment #3)
> seems easy enough to add a 'upside-down' button between the rotate left and
> rotate right buttons

Yes, this is probably the best option... (Although I am a little hesitant about making this a prominent control - people will inevitably try and it and flip their displays. Very few of them will actually need it.)
Comment 5 Bastien Nocera 2013-11-28 16:52:25 UTC
*** Bug 719499 has been marked as a duplicate of this bug. ***
Comment 6 Jes Sorensen 2013-11-28 16:59:49 UTC
Another legitimate use case are tablet laptops like the Lenovo Yoga - see pic:

http://shop.lenovo.com/us/en/landingpage/yoga/yoga-models.html

Most people won't use any of the rotation options, but those who do can figure
out which one to press. Please add this back either by allowing it by clicking
on the rotate buttons multiple times or placing an inverted button in the middle.
Comment 7 Matthias Clasen 2013-12-04 03:45:32 UTC
Created attachment 263481 [details] [review]
display: Make rotate buttons stay sensitive

It was pointed out that there are some use cases where it is
important to rotate by 180°. The easiest way to allow this is
to keep the rotation buttons sensitive. To alleviate the possible
confusion that the monitor thumbnail looks the same for 0° and
180°, add a label that shows the current rotation.
Comment 8 Matthias Clasen 2013-12-04 03:49:33 UTC
Created attachment 263482 [details]
rotation label
Comment 9 Matthias Clasen 2013-12-05 06:00:06 UTC
Created attachment 263561 [details] [review]
display: Add an 'upside-down' button

Turn the rotation buttons into toggle buttons, and add one for
'upside-down'.
Comment 10 Matthias Clasen 2013-12-05 06:00:50 UTC
Created attachment 263562 [details]
toggle buttons
Comment 11 Matthias Clasen 2013-12-05 11:23:51 UTC
Created attachment 263577 [details] [review]
display: Use radio buttons

Turn the rotation buttons into radio buttons, and add buttons
for 'rightside up' and 'upside down'.
Comment 12 Matthias Clasen 2013-12-05 11:24:21 UTC
Created attachment 263578 [details]
radio buttons
Comment 13 Bastien Nocera 2013-12-05 11:53:31 UTC
Review of attachment 263561 [details] [review]:

Looks good.
Comment 14 Bastien Nocera 2013-12-05 11:55:22 UTC
Review of attachment 263577 [details] [review]:

As mentioned in IRC, it's not clear what the buttons do, and we lose the direction from the arrows indicating which way the display would "move" when clicked. The toggle flip looks much easier to use to me.
Comment 15 Matthias Clasen 2013-12-05 22:15:16 UTC
Attachment 263561 [details] pushed as 732d3e0 - display: Add an 'upside-down' button
Comment 16 Bastien Nocera 2013-12-17 09:02:15 UTC
*** Bug 711309 has been marked as a duplicate of this bug. ***