display: Add an 'upside-down' button

Turn the rotation buttons into toggle buttons, and add one for
'upside-down'.

https://bugzilla.gnome.org/show_bug.cgi?id=715092